--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>backend</name>
-	<description>Restful Api for Kips E Commerce Appliction</description>
+	<description>Restful Api for Kips E Commerce Application</description>
 	<properties>
 		<java.version>20</java.version>
 	</properties>
@@ -50,6 +50,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 	</dependencies>
 
