--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -28,4 +28,4 @@ spring:
       file-size-threshold: 2KB
       max-file-size: 2000KB
       max-request-size: 2000KB
-file-url: http://localhost:8080/api/file/download/
+file-url: http://localhost:8080/api/file/download/product/
