--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,10 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "proxy":"http://localhost:8080",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
