--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "jwt-decode": "^3.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
