--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -31,6 +31,8 @@ name: SonarCloud analysis
 on:
   push:
     branches: [ "master" ]
+    paths:
+      - 'product-api/**'
   pull_request:
     branches: [ "master" ]
   workflow_dispatch:
@@ -56,7 +58,7 @@ jobs:
             # Unique keys of your project and organization. You can find them in SonarCloud > Information (bottom-left menu)
             # mandatory
             -Dsonar.projectKey=sametakbal_kips-shop
-            -Dsonar.organization=sametakbal
+            -Dsonar.organization=sametakbaldeveloper
             # Comma-separated paths to directories containing main source files.
             #-Dsonar.sources= # optional, default is project base directory
             # Comma-separated paths to directories containing test source files.
