--- a/product-api/build.gradle
+++ b/product-api/build.gradle
@@ -2,13 +2,13 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.1'
 	id 'io.spring.dependency-management' version '1.1.5'
-	id 'org.sonarqube' version '4.0.0.2929'
+	id 'org.sonarqube' version '4.5'
 }
 
 group = 'com.kips'
 version = '0.0.1-SNAPSHOT'
 
-apply plugin: 'org.sonarqube'
+apply plugin: 'org.sonar'
 
 sonarqube {
 	properties {
