--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.sonarqube' version '4.0.0.2929'
+    id "org.sonarqube" version "4.4.1.3373"
 }
 
 subprojects {
@@ -9,7 +9,7 @@ subprojects {
         properties {
             property "sonar.projectKey", "sametakbal_kips-shop"
             property "sonar.organization", "sametakbaldeveloper"
-            property "sonar.host.url", "https://sonarcloud.io"
+            property "sonar.host.url", "http://localhost:9000"
         }
     }
 }
