--- a/product-api/build.gradle
+++ b/product-api/build.gradle
@@ -8,7 +8,7 @@ plugins {
 group = 'com.kips'
 version = '0.0.1-SNAPSHOT'
 
-apply plugin: 'org.sonar'
+apply plugin: 'org.sonarqube'
 
 sonarqube {
 	properties {
