--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ subprojects {
         properties {
             property "sonar.projectKey", "sametakbal_kips-shop"
             property "sonar.organization", "sametakbaldeveloper"
-            property "sonar.host.url", "http://localhost:9000"
+            property "sonar.host.url", "https://sonarcloud.io"
         }
     }
 }
