--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ subprojects {
             property "sonar.projectKey", "sametakbal_kips-shop"
             property "sonar.organization", "sametakbaldeveloper"
             property "sonar.host.url", "https://sonarcloud.io"
+            property "sonar.login", "${{ secrets.SONAR_TOKEN }}"
         }
     }
 }
