--- a/product-api/build.gradle
+++ b/product-api/build.gradle
@@ -13,6 +13,9 @@ apply plugin: 'org.sonarqube'
 sonarqube {
 	properties {
 		property "sonar.projectKey", "sametakbal_kips-shop"
+		property "sonar.organization", "sametakbaldeveloper"
+		property "sonar.host.url", "https://sonarcloud.io"
+		property "sonar.login", "${{ secrets.SONAR_TOKEN }}"
 	}
 }
 
