--- a/product-api/build.gradle
+++ b/product-api/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.1'
 	id 'io.spring.dependency-management' version '1.1.5'
-	id 'org.sonarqube' version '4.0.0.2929'
+	id "org.sonarqube" version '4.4.1.3373'
 }
 
 group = 'com.kips'
