--- a/product-api/build.gradle
+++ b/product-api/build.gradle
@@ -15,7 +15,7 @@ sonarqube {
 		property "sonar.projectKey", "sametakbal_kips-shop"
 		property "sonar.organization", "sametakbaldeveloper"
 		property "sonar.host.url", "https://sonarcloud.io"
-		property "sonar.login", "${{ secrets.SONAR_TOKEN }}"
+		property "sonar.login", "e4d8adb6d397af356a7a4ac1cc6421877b50c13c"
 	}
 }
 
