--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ subprojects {
 
 sonarqube {
     properties {
-        property "sonar.projectName", "product-api"
+        property "sonar.projectName", "kips-shop"
         property "sonar.projectKey", "sametakbal_kips-shop"
         property "sonar.organization", "sametakbaldeveloper"
         property "sonar.login", "e4d8adb6d397af356a7a4ac1cc6421877b50c13c"
