sonarcloud.yml update

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -56,11 +56,5 @@ jobs:
         with:
           name: test-results-${{ matrix.project }}
           path: ${{ matrix.project }}/build/test-results/test
-            - name: SonarCloud Scan
-                uses: SonarSource/sonarcloud-github-action@master
-                with:
-                  args: >
-                    -Dsonar.projectKey=sametakbal_kips-shop
-                    -Dsonar.organization=sametakbaldeveloper
-                env:
-                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        env:
+          SONAR_TOKEN: e4d8adb6d397af356a7a4ac1cc6421877b50c13c
