--- a/product-api/build.gradle
+++ b/product-api/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.3.1'
+	id 'org.springframework.boot' version '3.3.3'
 	id 'io.spring.dependency-management' version '1.1.5'
 	id "org.sonarqube" version '4.4.1.3373'
 }
@@ -15,7 +15,7 @@ sonarqube {
 		property "sonar.projectKey", "sametakbal_kips-shop"
 		property "sonar.organization", "sametakbaldeveloper"
 		property "sonar.host.url", "https://sonarcloud.io"
-		property "sonar.token", "e4d8adb6d397af356a7a4ac1cc6421877b50c13c"
+		property "sonar.token", ${{ secrets.SONAR_TOKEN }}
 	}
 }
 
