--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,6 @@ sonarqube {
         property "sonar.projectName", "kips-shop"
         property "sonar.projectKey", "sametakbal_kips-shop"
         property "sonar.organization", "sametakbaldeveloper"
-        property "sonar.token", "${{ secrets.SONAR_TOKEN }}"
+        property "sonar.token", ${{ secrets.SONAR_GRADLE_TOKEN }}
     }
 }
