sonarcloud.yml update

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -18,6 +18,7 @@ jobs:
       matrix:
         project:
           - product-api
+          - order-api
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
