--- a/order-api/build.gradle
+++ b/order-api/build.gradle
@@ -2,10 +2,22 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.3'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id "org.sonarqube" version '4.4.1.3373'
 }
 
 group = 'com.kips'
 version = '0.0.1-SNAPSHOT'
+
+apply plugin: 'org.sonarqube'
+
+sonarqube {
+	properties {
+		property "sonar.projectKey", "sametakbal_kips-shop"
+		property "sonar.organization", "sametakbaldeveloper"
+		property "sonar.host.url", "https://sonarcloud.io"
+		property "sonar.token", System.getenv("SONAR_TOKEN")
+	}
+}
 
 java {
 	toolchain {
