--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ sonarqube {
 		property "sonar.host.url", "https://sonarcloud.io"
 		property "sonar.login", System.getenv("SONAR_TOKEN")
 
+		property "sonar.sources", "src/main/java"
+		property "sonar.tests", "src/test/java"
 		property "sonar.exclusions", "**/db/migration/**/*.sql"
 	}
 }
