--- a/build.gradle
+++ b/build.gradle
@@ -52,5 +52,6 @@ sonarqube {
 		property "sonar.sources", "src/main/java"
 		property "sonar.tests", "src/test/java"
 		property "sonar.inclusions", "**/*.java"
+		property "sonar.exclusions", "**/db/migration/**/*.sql"
 	}
 }
